syntax = "proto3";
package kurtosis_package_indexer;

option go_package = "github.com/kurtosis-tech/kurtosis-package-indexer/api/golang/generated";

import "google/protobuf/empty.proto";

service KurtosisPackageIndexer {
  rpc IsAvailable (google.protobuf.Empty) returns (google.protobuf.Empty) {};

  rpc GetPackages(google.protobuf.Empty) returns (GetPackagesResponse) {};

  rpc Reindex(google.protobuf.Empty) returns (google.protobuf.Empty) {};
}

message GetPackagesResponse {
  repeated KurtosisPackage packages = 1;
}

message KurtosisPackage {
  string name = 1;

  repeated PackageArg args = 2;

  uint64 stars = 3;

  string description = 4;

  string url = 5;

  optional string entrypoint_description = 6; // optional for backcompat

  optional string returns_description = 7; // optional for backcompat
}

message PackageArg {
  string name = 1;

  bool is_required = 2;

  optional ArgumentValueType type = 3; // deprecated in favour of PackageArgumentType

  optional string description = 4; // optional for backcompat

  optional PackageArgumentType typeV2 = 5;  // optional for backcompat. It fully replaces PackageArgType
}

enum ArgumentValueType {
  BOOL = 0;
  STRING = 1;
  INTEGER = 2;
  FLOAT = 3;
  DICT = 4;
  JSON = 5;
  LIST = 6;
}

message PackageArgumentType {
  ArgumentValueType top_level_type = 1;

  optional ArgumentValueType inner_type_1 = 2;

  optional ArgumentValueType inner_type_2 = 3;
}
